Try simplifying tests